# SecondBrainApp

./: .gitignore  BUILD.md  CNAME  Dockerfile  INSTALL.md  LICENSE  Launch_BaddyAgent.command  Makefile  README.md  README_Cursor_Boot.txt  SYSTEM_SUMMARY.md  SecondBrain.app.txt  SecondBrainApp.code-workspace  SecondBrainApp.platypus  SecondBrainApp_Package_20250504.zip.sha256  SourceCode_NotepadView.txt  TROUBLESHOOTING.md  agent_tasks.txt  agent_upgrader.py  assistant_settings.json  backup_auto.logwhoami  build_all.sh  build_app.sh  build_icon.sh  build_macos.sh  build_queue.py  build_windows.py  bundle.py  clean_requirements.py  cli_and_plugins_test_output.txt  config.py  create_ai_toolkit.py  create_app_bundle.command  create_dmg.command  create_installer.command  create_prompt_vault.py  create_release.command  create_storefront_package.py  current_requirements.txt  deploy.py  (+67 more)
.cursor/: settings.json
.devcontainer/: devcontainer.json
app_core/: error_handler.py  forge.py  njax.py  vault.py  voice.py
config/: agent_config.json  backup_config.json  njax_config.json  test_config.json  voice_config.json
core/: cli_selector.py
delivery_package/: version.json
docs/: DEVELOPMENT.md  README.md  USER_GUIDE.md  companion_journaling_backup.md  payment_system.md
examples/: check_launch_guide.py  generate_daily_summary.py  generate_income_report.py  generate_launch_guide.py  generate_module_map.py  generate_simple_income_summary.py  voice_demo.py
gui/: payment_dashboard.py
launcher/: main.py
nginx/: secondbrain.conf
plugins/: example_plugin.py  system_monitor_plugin.py  task_plugin.py  weather_plugin.py
scripts/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  access_control.py  advanced_automation.py  (+28 more)
(+434 files in other folders)
